[package]
name = "lastpass"
version = "0.1.1-alpha.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "GPL-2.0-or-later"
edition = "2018"
description = "An unofficial interface to the LastPass API."
keywords = ["lastpass", "password", "password-manager", "API"]
categories = ["api-bindings", "asynchronous", "authentication", "cryptography"]
repository = "https://github.com/Michael-F-Bryan/lastpass"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.8"
reqwest = { version = "0.10", features = ["cookies", "gzip", "json"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "0.2.17", features = ["macros"] }
env_logger = "0.7.1"
structopt = "0.3.13"
serde-xml-rs = "0.4.0"
sha2 = "0.8.1"
digest = "0.8.1"
hex = "0.4.2"
typenum = "1.11.2"
pbkdf2 = "0.3.0"
hmac = "0.7.1"
byteorder = "1.3.4"
aes = "0.7"
block-modes = "0.8"
url = "2.1.1"
base64 = "0.12.0"
rsa = "0.5.0"
sha-1 = "0.9"
rand = "0.8.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
